--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "7",
     "express": "^4.16.4",
     "memory-fs": "^0.4.1",
+    "react-helmet": "^5.2.1",
     "require-from-string": "^2.0.2"
   },
   "devDependencies": {
