--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^5.0.7",
     "react-redux-epic": "^1.1.0",
     "react-router-dom": "^4.3.1",
+    "react-use-gesture": "^6.0.1",
     "redux": "^4.0.1",
     "redux-observable": "^1.0.0",
     "redux-thunk": "^2.3.0",
