--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "highlightjs": "^9.12.0",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
