--- a/package.json
+++ b/package.json
@@ -4,18 +4,12 @@
   "description": "Client application for besidesprogramming.com",
   "main": "index.js",
   "dependencies": {
-    "babel-loader": "7",
-    "express": "^4.16.4",
-    "memory-fs": "^0.4.1",
-    "react-helmet": "^5.2.1",
-    "require-from-string": "^2.0.2"
-  },
-  "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-brands-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "babel-core": "^6.26.3",
+    "babel-loader": "7",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -23,10 +17,12 @@
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "highlight.js": "^9.16.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
+    "memory-fs": "^0.4.1",
     "node-fetch": "^2.3.0",
     "node-sass": "^4.9.3",
     "node-sass-package-importer": "^5.3.0",
@@ -34,10 +30,12 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-use-gesture": "^6.0.1",
     "redux": "^4.0.1",
+    "require-from-string": "^2.0.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
