--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "2.11.1",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-dev-server": "2.11.1"
   },
   "scripts": {
     "build-css": "run-p -s build-css:*",
