Update configuration with the new domain name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Besides Programming",
+	"name": "The Missing Semicolon",
 	"background_color": "#fff",
 	"theme_color": "#fff",
 	"icons": [
